# openai-compare

./: .gitignore  README.md  pyproject.toml  scoring_functions.py  utils.py  workbench.ipynb
prompts/DevProxy_v0.29.0/: api_operation_description.prompty  api_operation_id.prompty  api_service_name.prompty  singular_noun.prompty
tests/: test_DevProxy_v0_29_api_service_name.ipynb  test_DevProxy_v0_29_operation_description.ipynb  test_DevProxy_v0_29_operation_id.ipynb  test_DevProxy_v0_29_singular_noun.ipynb
