[project]
name = "ollama-compare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bert-score>=0.3.13",
    "evaluate>=0.4.3",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "nltk>=3.9.1",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "prompty>=0.1.50",
    "rapidfuzz>=3.11.0",
    "rouge-score>=0.1.2",
    "torch==2.3.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
